fix: resolved alignment issue

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     margin: 0px;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 700px) {
     .txtInOut {
         max-width: 90%;
     } 
